trunk/Archive2/cc/e6f5f93d57ab0d/output
main.cpp: In function 'int main()':
main.cpp:54:5: error: redefinition of 'int main()'
 int main()
     ^
main.cpp:7:5: note: 'int main()' previously defined here
 int main()
     ^
